# patos

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/: .coderabbit.yaml  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  index.md  release.md
docs/hooks/: llms.py
docs/patos/: cache.md  decorator.md  dispatch.md  flags.md  flyweight.md  lifecycle.md  pipeline.md  registry.md  singleton.md  sql.md  strategy.md  strflag.md
docs/stylesheets/: base.css  brand.css  extra.css
src/patos/: __init__.py  _catalog.py  bases.py  cache.py  decorator.py  dispatch.py  flags.py  flyweight.py  lifecycle.py  pipeline.py  projection.py  registry.py  singleton.py  strategy.py  strflag.py
src/patos/sql/: __init__.py  columns.py  enum.py  expressions.py  model.py  relations.py  templates.py  types.py
tests/: conftest.py  test_bases.py  test_dispatch.py  test_new_patterns.py  test_package.py  test_patterns.py  test_projection.py  test_sql.py
typing/: dispatch.py  sql.py
