[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patos"
version = "0.0.8"
description = "Typed Python design and dispatch patterns, pip one in or copy one in and own the file"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Pedro Valois", email = "contact@phvv.me" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
# Every pure pato is stdlib and copies cleanly into your own repo. The one exception is
# `bases`, the pydantic house models the flock shares, so pydantic is the sole runtime dep.
dependencies = ["pydantic>=2.13.4,<3"]

[project.optional-dependencies]
dev = [
  "hypothesis>=6",
  "mypy>=1.11",
  "pyrefly>=1",
  "pytest>=9",
  "pytest-cov>=5",
  "pytest-randomly>=3",
  "ruff>=0.15",
]
docs = [
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://phvv.me/patos"
Repository = "https://github.com/phvv-me/patos"
Issues = "https://github.com/phvv-me/patos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/patos"]

[tool.ruff]
line-length = 99
target-version = "py314"
extend-exclude = [".chefe"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_explicit = true
plugins = ["pydantic.mypy"]
files = ["src"]
mypy_path = "src"

# pydantic's model metaclass makes mypy attribute an explicit Any to every BaseModel
# subclass at its class statement, so disallow_any_explicit fires falsely on the module
# that defines our base models. The guard stays on everywhere else.
[[tool.mypy.overrides]]
module = "patos.bases"
disallow_any_explicit = false

[tool.pyrefly]
project-includes = ["src", "tests"]
search-path = ["src", "tests", "."]

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["patos"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
