[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patos"
version = "0.0.9"
description = "Typed Python design and dispatch patterns, pip one in or copy one in and own the file"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Pedro Valois", email = "contact@phvv.me" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
# Every pure pato is stdlib and copies cleanly into your own repo. The one exception is
# `bases`, the pydantic house models the flock shares, so pydantic is the sole runtime dep.
dependencies = ["pydantic>=2.13.4,<3"]

[project.optional-dependencies]
sql = [
  "inflection>=0.5.1,<0.6",
  "pgvector>=0.5,<0.6",
  "sqlalchemy>=2.1.0b3,<3",
  "sqlmodel>=0.0.39,<0.1",
  "typing-extensions>=4.15,<5",
]
dev = [
  "hypothesis>=6",
  "pyrefly>=1.1.1",
  "pytest>=9",
  "pytest-cov>=5",
  "pytest-randomly>=3",
  "ruff>=0.15",
  "sqlmodel>=0.0.39,<0.1",
  "ty>=0.0.59,<0.1",
]
docs = [
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://phvv.me/patos"
Repository = "https://github.com/phvv-me/patos"
Issues = "https://github.com/phvv-me/patos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/patos"]

[tool.uv]
override-dependencies = ["sqlalchemy>=2.1.0b3,<3"]

[tool.ruff]
line-length = 99
target-version = "py314"
extend-exclude = [".chefe"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyrefly]
project-includes = ["src", "tests", "typing"]
search-path = ["src", "tests", "typing", "."]

[tool.ty.environment]
python = "../../.chefe/.pixi/envs/default"
root = ["src", "typing"]

[tool.ty.src]
include = ["src", "typing"]

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["patos"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "\\.\\.\\.",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
